--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.3) unstable; urgency=low
+
+  * Added support for automatic generation of debian install scripts to
+    dh_installmenu and dh_installdebfiles and dh_clean.
+  * Removed some pointless uses of cat.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 26 Sep 1997 21:52:53 -0400
+
 debhelper (0.2) unstable; urgency=low
 
   * Moved out of unstable, it still has rough edges and incomplete bits, but
