--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.4) unstable; urgency=low
+
+  * Added dh_strip to strip binaries and libraries.
+  * Fixed several man pages.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 28 Sep 1997 20:46:32 -0400
+
 debhelper (0.3) unstable; urgency=low
 
   * Added support for automatic generation of debian install scripts to
