--- a/dh_fixperms.1
+++ b/dh_fixperms.1
@@ -1,4 +1,4 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_FIXPERMS 1
 .SH NAME
 dh_fixperms \- fix permissions of files in package build directories
 .SH SYNOPSIS
