--- a/dh_installdebfiles.1
+++ b/dh_installdebfiles.1
@@ -1,4 +1,4 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_INSTALLDEBFILES 1
 .SH NAME
 dh_installdebfiles \- install files into the DEBIAN directory
 .SH SYNOPSIS
