--- a/dh_installmanpages.1
+++ b/dh_installmanpages.1
@@ -1,4 +1,4 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_INSTALLMANPAGES 1
 .SH NAME
 dh_installmanpages \- install man pages into package build directories
 .SH SYNOPSIS
