--- a/dh_installmenu.1
+++ b/dh_installmenu.1
@@ -1,4 +1,4 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_INSTALLMENU 1
 .SH NAME
 dh_installmenu \- install debian menu files into package build directories
 .SH SYNOPSIS
