--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.5) unstable; urgency=low
+
+  * Added dh_installcron to install cron jobs.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 30 Sep 1997 19:37:41 -0400
+
 debhelper (0.4) unstable; urgency=low
 
   * Added dh_strip to strip binaries and libraries.
