--- a/dh_installdebfiles.1
+++ b/dh_installdebfiles.1
@@ -7,7 +7,7 @@ dh_installdebfiles \- install files into the DEBIAN directory
 .SH "DESCRIPTION"
 dh_installdebfiles is a debhelper program that is responsible for installing
 files into the DEBIAN directory in package build directories with the
-correct prmissions.
+correct permissions.
 .P
 dh_installdocs automatically installs the following files from debian/ into
 the DEBIAN directory:
