--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.6) unstable; urgency=low
+
+  * Got rid of bashisms - this package should work now if /bin/sh is ash.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 10 Oct 1997 15:24:40 -0400
+
 debhelper (0.5) unstable; urgency=low
 
   * Added dh_installcron to install cron jobs.
