--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -12,10 +12,11 @@ dh_installdocs automatically installs debian/copyright if it exists. If
 dh_installdocs is acting on multiple packages, debian/copyright files will be 
 installed into all packages.
 .P
-Any filenames specified as parameters, as well as debian/README.debian and
-debian/TODO, if they exist, will be installed into the first binary
-package listed in debian/control, if dh_installdocs is acting on that
-package.
+Any filenames specified as parameters, as well as debian/README.debian (or
+debian/README.Debian) and debian/TODO, if they exist, will be installed into
+the first binary package listed in debian/control, if dh_installdocs is acting
+on that package. Note that debian/TODO will be installed named TODO.Debian,
+if the package is not a debian native package.
 .P
 A file named debian/docs (for the first binary package in debian/control),
 or debian/package.docs (for each additional package in debian/control) can
@@ -45,6 +46,10 @@ and
 .B \-p
 arguments are cumulative. If none are specified, then all packages listed in
 the control file will be effected.
+.P
+Note that dh_installdocs will happily copy entire directory hiearchies if
+you ask it to (it uses cp -a internally). If it is asked to install a
+directory, it will install the complete contents of the directory.
 .SH ENVIRONMENT
 .TP
 .I DH_VERBOSE
