--- a/dh_installexamples.1
+++ b/dh_installexamples.1
@@ -40,6 +40,10 @@ and
 .B \-p
 arguments are cumulative. If none are specified, then all packages listed in
 the control file will be effected.
+.P
+Note that dh_examples will happily copy entire directory hiearchies if
+you ask it to (it uses cp -a internally). If it is asked to install a
+directory, it will install the complete contents of the directory.
 .SH ENVIRONMENT
 .TP
 .I DH_VERBOSE
