--- a/README
+++ b/README
@@ -4,7 +4,9 @@ dh_* commands.
 
 To help you get started, I've included an example of a debian/rules file
 that uses debhelper commands extensivly. See
-/usr/doc/debhelper/examples/rules .
+/usr/doc/debhelper/examples/rules . These files are also useful as they give
+one good order you can run the different debhelper scripts in (though other
+variations are possible).
 
 Automatic generation of debian install scripts:
 ----------------------------------------------
