--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.9) unstable; urgency=low
+
+  * Added dh_suidregister, interfaces to to the suidmanager package.
+  * dh_installdebfiles: fixed typo on man page.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 18 Oct 1997 20:55:39 -0400
+
 debhelper (0.8) unstable; urgency=low
 
   * Added dh_md5sum, generates a md5sums file.
