--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-.so files of compressed manpages change to symlinks
+.so files of compressed manpages -- change to symlinks
 add all other functionality of debstd (??)
 dh_fixperms: allow listing of files not to be touched (diffucult).
-add suidregister support
