--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.8) unstable; urgency=low
+
+  * Added dh_md5sum, generates a md5sums file.
+  * dh_clean: fixed to echo all commands when verbose mode is on.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 17 Oct 1997 14:18:26 -0400
+
 debhelper (0.7) unstable; urgency=low
 
   * Sped up some things by removing unnecesary for loops.
