--- a/dh_installdebfiles.1
+++ b/dh_installdebfiles.1
@@ -26,9 +26,9 @@ The files postinst, preinst, postrm, and prerm are handled specially: If a
 corresponding file named debian/script.debhelper exists, the contents of that 
 file are merged into the script as follows: If the script exists, then 
 anywhere in it that "#DEBHELPER#" appears, the text of the .debhelper file is
-inserted. If the script does not exist, then a script is generated from the 
-.debhelper file. The .debhelper files are created by other debhelper programs,
-such as 
+inserted. If the script does not exist, then a script is generated from 
+the .debhelper file. The .debhelper files are created by other debhelper 
+programs, such as 
 .BR dh_installmenu (1)
 , and are shell scripts.
 .P
