--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+debhelper (0.10) unstable; urgency=medium
+
+  * dh_installdebfiles: fixed *bad* bug that messed up the names of all
+    files installed into DEBIAN/ for multiple binary packages.
+  * dh_md5sums: fixed another serious bug if dh_md5sums was used for
+    multiple binary packages.
+  * If you have made any multiple binary packages using debhelper, you
+    should rebuild them with this version.
+  * dh_md5sums: show cd commands in verbose mode.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 20 Oct 1997 14:44:30 -0400
+
 debhelper (0.9) unstable; urgency=low
 
   * Added dh_suidregister, interfaces to to the suidmanager package.
