--- a/README
+++ b/README
@@ -8,6 +8,58 @@ that uses debhelper commands extensivly. See
 one good order you can run the different debhelper scripts in (though other
 variations are possible).
 
+
+Converting from debstd to debhelper:
+-----------------------------------
+
+Debhelper is designed to be mostly backwards compatable to debstd. I say
+mostly becuase I haven't made debhelper handle everything that debstd does
+yet, and in a few cases, it does things differently (and I hope, better).
+
+In general, you can switch over to using debhelper as follows. In your
+debian/rules, where you used to have some lines that read something like:
+
+	debstd CHANGES TODO README
+	dpkg-gencontrol
+	dpkg --build debian/tmp ..
+
+Remove that and replace it with something like:
+
+	dh_installdocs TODO README
+	dh_installexamples
+	dh_installmenu
+	dh_installcron
+	dh_installmanpages
+	dh_installchangelogs CHANGES
+	dh_strip
+	dh_compress
+	dh_fixperms
+	dh_suidregister
+	dh_installdebfiles
+	dh_m5dsums
+	dh_builddeb
+
+Notice that the parameters sent to debstd get split up among the dh_*
+programs. The upstream changelog is passed to dh_installchangelogs, and the
+docs are passed to dh_installdocs.
+
+Debstd has many switches, that turn off differnt parts of it. So if you 
+were using debstd -m to tell it not to automatically install manpages,
+for example, you can just comment out the dh_installmanpages line.
+
+Finally, debstd automatically modified postinst, postrm, etc scripts. Some
+of the dehelper apps do that too, but they do it differnently. Debstd just
+appends its commands to the end of the script. Debhelper reqyires that you
+insert a tag into your scripts, that will tell debhelper where to insert
+commands. So if you have postinst, postrm, etc scripts, add a line reading
+"#DEBHELPER" to the end of them.
+
+Once you think it's all set up properly, do a test build of your package. If 
+it works ok, I reccommend that you compare the new package and the old 
+debstd-generated package very closely. Pay special attention to the postint, 
+postrm, etc scripts.
+
+
 Automatic generation of debian install scripts:
 ----------------------------------------------
 
@@ -22,6 +74,7 @@ by the -n parameter.
 
 Note that it will be shell code, so you cannot directly use it in a perl 
 script.
+
 
 Notes on multiple binary packages:
 ---------------------------------
