--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (0.11) unstable; urgency=low
+
+  * dh_md5sums: behavior modification: do not generate md5sums for conffiles.
+    (Thanks to Charles Briscoe-Smith <cpb4@ukc.ac.uk>) #14048.
+  * dh_md5sums: can generate conffile md5sums with -x parameter.
+  * Added a "converting from debstd" section to the README.
+  * Added dh_du, generates a DEBIAN/du file with disk usage stats (#14048).
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 21 Oct 1997 13:17:28 -0400
+
 debhelper (0.10) unstable; urgency=medium
 
   * dh_installdebfiles: fixed *bad* bug that messed up the names of all
