--- a/dh_md5sums.1
+++ b/dh_md5sums.1
@@ -3,12 +3,13 @@
 dh_md5sums \- generate DEBIAN/md5sums file
 .SH SYNOPSIS
 .B dh_md5sums
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[-x] [-v] [-a] [-i] [-ppackage]"
 .SH "DESCRIPTION"
 dh_md5sums is a debhelper program that is responsible for generating
 a DEBIAN/md5sums file, which lists the md5sums of each file in the package.
 .P
-All files in DEBIAN/ are omitted from the md5sums file.
+All files in DEBIAN/ are omitted from the md5sums file, as are all conffiles
+(unless you use the -x switch).
 .P
 The md5sums file is installed with proper permissions and ownerships.
 .SH OPTIONS
@@ -24,6 +25,10 @@ Generate md5sums files for all architecture independent packages.
 .TP
 .B \-ppackage
 Generate md5sums file for the package named "package".
+.TP
+.B \-x
+Include conffiles in the md5sums list. Note that this is redundant, and
+included elsewhere in debian packages.
 .SH NOTES
 The
 .B \-a
@@ -36,9 +41,6 @@ the control file will be effected.
 .TP
 .I DH_VERBOSE
 Enables verbose mode
-.SH BUGS
-It would be better if it did not include md5sums of conffiles, since this
-info is duplicated elsewhere.
 .SH "SEE ALSO"
 .BR /usr/doc/debhelper/README
 .SH AUTHOR
