--- a/README
+++ b/README
@@ -36,7 +36,7 @@ Remove that and replace it with something like:
 	dh_fixperms
 	dh_suidregister
 	dh_installdebfiles
-	dh_m5dsums
+	dh_md5sums
 	dh_builddeb
 
 Notice that the parameters sent to debstd get split up among the dh_*
