--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.12) unstable; urgency=low
+
+  * Fixed mispelling of dh_md5sums in examples rules files and README.
+    (#13990) Thanks, Adrian.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 24 Oct 1997 14:35:30 -0400
+
 debhelper (0.11) unstable; urgency=low
 
   * dh_md5sums: behavior modification: do not generate md5sums for conffiles.
