--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-.so files of compressed manpages -- change to symlinks
-add all other functionality of debstd (??)
-dh_fixperms: allow listing of files not to be touched (diffucult).
+* .so files of compressed manpages -- change to symlinks
+* add all other functionality of debstd (??)
+* dh_fixperms: allow listing of files not to be touched (diffucult).
+* add a dh_debstd, which mimics debstd, but uses debhelper tools internally.
