--- a/README
+++ b/README
@@ -36,6 +36,7 @@ Remove that and replace it with something like:
 	dh_fixperms
 	dh_suidregister
 	dh_installdebfiles
+	dh_makeshlibs
 	dh_md5sums
 	dh_builddeb
 
