--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.13) unstable; urgency=low
+
+  * Added dh_makeshlibs, automatically generates a shlibs file.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 24 Oct 1997 20:33:14 -0400
+
 debhelper (0.12) unstable; urgency=low
 
   * Fixed mispelling of dh_md5sums in examples rules files and README.
