--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.14) unstable; urgency=low
+
+  * dh_fixperms: leave permissions on files in /usr/doc/packages/examples
+    unchanged.
+  * Install examples/rules* executable.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 27 Oct 1997 12:42:33 -0500
+
 debhelper (0.13) unstable; urgency=low
 
   * Added dh_makeshlibs, automatically generates a shlibs file.
