--- a/dh_fixperms.1
+++ b/dh_fixperms.1
@@ -8,10 +8,10 @@ dh_fixperms \- fix permissions of files in package build directories
 dh_fixperms is a debhelper program that is responsible for setting the
 permissions of files in package build directories to a sane state.
 .P
-dh_fixperms makes all files in usr/doc in the package build directory be 
-mode 644. It also changes the permissions of all man pages to mode 644.
-It makes all files be owned by root, and it removes group and other write
-permission from all files.
+dh_fixperms makes all files in usr/doc in the package build directory
+(excluding files in the examples/ directory) be mode 644. It also changes 
+the permissions of all man pages to mode 644. It makes all files be owned by 
+root, and it removes group and other write permission from all files.
 .SH OPTIONS
 .TP
 .B \-v
