--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (0.15) unstable; urgency=low
+
+  * README: documented what temporary directories are used by default for 
+    installing package files into.
+  * dh_*: added -P flag, to let a different package build directory be
+    specified.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  6 Nov 1997 15:51:22 -0500
+
 debhelper (0.14) unstable; urgency=low
 
   * dh_fixperms: leave permissions on files in /usr/doc/packages/examples
