--- a/dh_builddeb.1
+++ b/dh_builddeb.1
@@ -3,7 +3,7 @@
 dh_builddeb \- build debian packages
 .SH SYNOPSIS
 .B dh_builddeb
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
 dh_builddeb simply calls
 .BR dpkg (8)
@@ -21,6 +21,9 @@ Build all architecture independent packages.
 .TP
 .B \-ppackage
 Build the package named "package".
+.TP
+.B \-Ptmpdir
+Use "tmpdir" for package build directory.
 .SH NOTES
 The
 .B \-a
