--- a/dh_clean.1
+++ b/dh_clean.1
@@ -3,7 +3,7 @@
 dh_clean \- clean up package build directories
 .SH SYNOPSIS
 .B dh_clean
-.I "[-v] [-a] [-i] [-ppackage] [file ...]"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [file ...]"
 .SH "DESCRIPTION"
 dh_clean is a debhelper program that is responsible for cleaning up after a
 package is built. It removes the package build directories, and removes some
@@ -22,6 +22,9 @@ Clean up the package build directory for all architecture independent packages.
 .TP
 .B \-ppackage
 Clean up the package build directory for the package named "package".
+.TP
+.B \-Ptmpdir
+Use "tmpdir" for package build directory.
 .TP
 .B file ...
 Delete these files too.
