--- a/dh_installchangelogs.1
+++ b/dh_installchangelogs.1
@@ -3,7 +3,7 @@
 dh_installchangelogs \- install changelogs into package build directories
 .SH SYNOPSIS
 .B dh_installchangelogs
-.I "[-v] [-a] [-i] [-ppackage] upstream"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] upstream"
 .SH "DESCRIPTION"
 dh_installchangelogs is a debhelper program that is responsible for installing
 changelogs into package build directories.
@@ -29,6 +29,9 @@ Install changelogs for all architecture independent packages.
 .TP
 .B \-ppackage
 Install changelogs for the package named "package".
+.TP
+.B \-Ptmpdir
+Use "tmpdir" for package build directory. 
 .SH NOTES
 The
 .B \-a
