--- a/dh_installcron.1
+++ b/dh_installcron.1
@@ -3,7 +3,7 @@
 dh_installcron \- install cron scripts into etc/cron.*
 .SH SYNOPSIS
 .B dh_installcron
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
 dh_installcron is a debhelper program that is responsible for installing
 cron scripts into etc/cron.* in package build directories. The files 
@@ -24,6 +24,9 @@ Install cron files for all architecture independent packages.
 .TP
 .B \-ppackage
 Install cron files for the package named "package".
+.TP
+.B \-Ptmpdir
+Use "tmpdir" for package build directory. 
 .SH NOTES
 The
 .B \-a
