--- a/dh_installmenu.1
+++ b/dh_installmenu.1
@@ -3,7 +3,7 @@
 dh_installmenu \- install debian menu files into package build directories
 .SH SYNOPSIS
 .B dh_installmenu
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
 dh_installmenu is a debhelper program that is responsible for installing
 fils used by the debian menu package into package build directories. 
@@ -40,6 +40,9 @@ Install menu files into the package named "package".
 .TP
 .B \-n
 Do not automatically generate code.
+.TP
+.B \-Ptmpdir
+Use "tmpdir" for package build directory. 
 .SH NOTES
 The
 .B \-a
