--- a/dh_undocumented.1
+++ b/dh_undocumented.1
@@ -3,7 +3,7 @@
 dh_undocumented \- make symlinks to undocumented.7 man page
 .SH SYNOPSIS
 .B dh_undocumented
-.I "[-v] [-a] [-i] [-ppackage] [manpage ...]"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [manpage ...]"
 .SH "DESCRIPTION"
 dh_undocumented is a debhelper program that is responsible for making
 symlinks to the
@@ -41,6 +41,9 @@ Install undocumented man page symlinks for all architecture independent packages
 .TP
 .B \-ppackage
 Install undocumented man page symlinks for the package named "package".
+.TP
+.B \-Ptmpdir
+Use "tmpdir" for package build directory. 
 .TP
 .B manpage ...
 Install undocumented man page symlinks for each of these man pages
