--- a/dh_du.1
+++ b/dh_du.1
@@ -3,7 +3,7 @@
 dh_du \- generate DEBIAN/du file
 .SH SYNOPSIS
 .B dh_md5sums
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
 dh_du is a debhelper program that is responsible for generating
 a DEBIAN/du file, which lists the disk usage of directories in the package.
@@ -24,6 +24,9 @@ Generate du files for all architecture independent packages.
 .TP
 .B \-ppackage
 Generate du file for the package named "package".
+.TP
+.B \-Ptmpdir
+Use "tmpdir" for package build directory. 
 .SH NOTES
 The
 .B \-a
