--- a/dh_installdebfiles.1
+++ b/dh_installdebfiles.1
@@ -3,7 +3,7 @@
 dh_installdebfiles \- install files into the DEBIAN directory
 .SH SYNOPSIS
 .B dh_installdebfils
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
 dh_installdebfiles is a debhelper program that is responsible for installing
 files into the DEBIAN directory in package build directories with the
@@ -49,6 +49,9 @@ Install files for all architecture independent packages.
 .TP
 .B \-ppackage
 Install files for the package named "package".
+.TP
+.B \-Ptmpdir
+Use "tmpdir" for package build directory. 
 .SH NOTES
 The
 .B \-a
