--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -3,7 +3,7 @@
 dh_installdocs \- install documentation into package build directories
 .SH SYNOPSIS
 .B dh_installdocs
-.I "[-v] [-a] [-i] [-ppackage] [file ...]"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [file ...]"
 .SH "DESCRIPTION"
 dh_installdocs is a debhelper program that is responsible for installing
 documentation into usr/doc/package in package build directories.
@@ -34,6 +34,9 @@ Install files for all architecture independent packages.
 .TP
 .B \-ppackage
 Install files for the package named "package".
+.TP
+.B \-Ptmpdir
+Use "tmpdir" for package build directory. 
 .TP
 .B file ...
 Install these files as documentation into the first binary package listed in
