--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.16) unstable; urgency=low
+
+  * dh_compress: always compress changelog and upstream changelog, no 
+    matter what their size (#14604) (policy 5.8)
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  6 Nov 1997 19:50:36 -0500
+
 debhelper (0.15) unstable; urgency=low
 
   * README: documented what temporary directories are used by default for 
