--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.17) unstable; urgency=low
+
+  * Added dh_installdirs, automatically creates subdirectories (for
+    compatability with debstd's debian/dirs file.
+  * dh_lib: fixed problem with -P flag.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  7 Nov 1997 16:07:11 -0500
+
 debhelper (0.16) unstable; urgency=low
 
   * dh_compress: always compress changelog and upstream changelog, no 
