--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 * add all other functionality of debstd (??)
 * dh_fixperms: allow listing of files not to be touched (diffucult).
 * add a dh_debstd, which mimics debstd, but uses debhelper tools internally.
+* dh_du: change it so it doesn't grep for things with tabs in them. That's
+  nasty. (and makes cut-and-paste from dh_du -v not work).
