--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (0.18) unstable; urgency=low
+
+  * examples/*: added source, diff targets that just print an error.
+  * dh_clean: clean up more files - *.orig, *.rej, *.bak, .*.orig, .*.rej, 
+    .SUMS, TAGS, and empty files.
+  * dh_lib: doit(): use eval on parameters, instead of directly running
+    them. This lets me clean up several nasty areas where I had to echo the
+    commands once, and then run them seperatly.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 10 Nov 1997 19:48:36 -0500
+
 debhelper (0.17) unstable; urgency=low
 
   * Added dh_installdirs, automatically creates subdirectories (for
