--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.19) unstable; urgency=low
+
+  * dh_installmenu.1: menufile is in section 5, not 1.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 12 Nov 1997 19:54:48 -0500
+
 debhelper (0.18) unstable; urgency=low
 
   * examples/*: added source, diff targets that just print an error.
