--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.20) unstable; urgency=low
+
+  * Added dh_installinit, which installs an init.d script, and edits the
+    postinst, postrm, etc.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 14 Nov 1997 00:45:53 -0500
+
 debhelper (0.19) unstable; urgency=low
 
   * dh_installmenu.1: menufile is in section 5, not 1.
