--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.21) unstable; urgency=low
+
+  * dh_installinit: on removal, fixed how update-rc.d is called.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 15 Nov 1997 20:43:14 -0500
+
 debhelper (0.20) unstable; urgency=low
 
   * Added dh_installinit, which installs an init.d script, and edits the
