--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.22) unstable; urgency=low
+
+  * dh_installdocs: Install README.debian as README.Debian (of course,
+    README.Debian is installed with the same name..)
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 18 Nov 1997 01:23:53 -0500
+
 debhelper (0.21) unstable; urgency=low
 
   * dh_installinit: on removal, fixed how update-rc.d is called.
