--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -12,8 +12,8 @@ dh_installdocs automatically installs debian/copyright if it exists. If
 dh_installdocs is acting on multiple packages, debian/copyright files will be 
 installed into all packages.
 .P
-Any filenames specified as parameters, as well as debian/README.debian (or
-debian/README.Debian) and debian/TODO, if they exist, will be installed into
+Any filenames specified as parameters, as well as debian/README.Debian (or
+debian/README.debian) and debian/TODO, if they exist, will be installed into
 the first binary package listed in debian/control, if dh_installdocs is acting
 on that package. Note that debian/TODO will be installed named TODO.Debian,
 if the package is not a debian native package.
