--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.23) unstable; urgency=low
+
+  * Now depends on fileutils (>= 3.16-4), becuase with any earlier version
+    of fileutils, install -p will not work (#14680)
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 19 Nov 1997 23:59:43 -0500
+
 debhelper (0.22) unstable; urgency=low
 
   * dh_installdocs: Install README.debian as README.Debian (of course,
