--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.25) unstable; urgency=low
+
+  * dh_compress: was not reading debian/compress file - fixed.
+  * examples/*: moved dh_clean call to after make clean is run.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 25 Nov 1997 15:43:58 -0500
+
 debhelper (0.24) unstable; urgency=low
 
   * dh_clean: no longer clean up empty (0 byte) files (#15240).
