--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.24) unstable; urgency=low
+
+  * dh_clean: no longer clean up empty (0 byte) files (#15240).
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 25 Nov 1997 14:29:37 -0500
+
 debhelper (0.23) unstable; urgency=low
 
   * Now depends on fileutils (>= 3.16-4), becuase with any earlier version
