--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.27) unstable; urgency=low
+
+  * README: fixed typoes (one serious).
+  * Ran ispell on all the documentation.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 30 Nov 1997 18:48:20 -0500
+
 debhelper (0.26) unstable; urgency=low
 
   * dh_installdirs: Do not create usr/doc/$PACKAGE directory. Bug #15498
