--- a/dh_clean.1
+++ b/dh_clean.1
@@ -35,7 +35,7 @@ The
 and
 .B \-p
 arguments are cumulative. If none are specified, then all packages listed in
-the control file will have thier package build directories cleaned up.
+the control file will have their package build directories cleaned up.
 .SH ENVIRONMENT
 .TP
 .I DH_VERBOSE
