--- a/dh_fixperms.1
+++ b/dh_fixperms.1
@@ -35,7 +35,7 @@ The
 and
 .B \-p
 arguments are cumulative. If none are specified, then all packages listed in
-the control file will have thier permissions fixed.
+the control file will have their permissions fixed.
 .SH ENVIRONMENT
 .TP
 .I DH_VERBOSE
