--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -50,7 +50,7 @@ and
 arguments are cumulative. If none are specified, then all packages listed in
 the control file will be effected.
 .P
-Note that dh_installdocs will happily copy entire directory hiearchies if
+Note that dh_installdocs will happily copy entire directory hierarchies if
 you ask it to (it uses cp -a internally). If it is asked to install a
 directory, it will install the complete contents of the directory.
 .SH ENVIRONMENT
