--- a/dh_installmanpages.1
+++ b/dh_installmanpages.1
@@ -13,7 +13,7 @@ dh_installmanpages scans the current directory and all subdirectories for
 filenames that look like man pages. It uses
 .BR file (1)
 to verify that the files are in the correct format. Then, based on the
-files' extentions, it installs them into the correct man directory.
+files' extensions, it installs them into the correct man directory.
 .P
 All filenames specified as parameters will be skipped by dh_installmanpages.
 This is useful if by default it installs some man pages that you do not want
@@ -58,7 +58,7 @@ Enables verbose mode
 .SH "SEE ALSO"
 .BR /usr/doc/debhelper/README
 .SH BUGS
-Man pages with the extention
+Man pages with the extension
 .B .man
 are not automatically installed. 
 .P
