--- a/dh_makeshlibs.1
+++ b/dh_makeshlibs.1
@@ -41,9 +41,9 @@ Enables verbose mode
 .SH "SEE ALSO"
 .BR /usr/doc/debhelper/README
 .SH BUGS
-There is no guarentee that the program will get the shlibs file right. For
+There is no guarantee that the program will get the shlibs file right. For
 example, it may not correctly guess the major number of your package. In
-casews like these (and perhaps in general, just to be safe), it is better to
+cases like these (and perhaps in general, just to be safe), it is better to
 create a debian/shlibs file by hand.
 This is a "do what I Mean" type program - you have been warned!
 .SH AUTHOR
