--- a/dh_suidregister.1
+++ b/dh_suidregister.1
@@ -24,7 +24,7 @@ will automatically register all files it finds.
 .P
 Note that this package modifies your postinst and postrm files. See
 .BR dh_installdebfiles (1)
-for an explination of how this works.
+for an explanation of how this works.
 .SH OPTIONS
 .TP
 .B \-v
