--- a/dh_testdir.1
+++ b/dh_testdir.1
@@ -16,7 +16,7 @@ Verbose mode; show all commands that modify the package build directory.
 This currently has no effect.
 .TP
 .B file ...
-Test for the existance of these files.
+Test for the existence of these files.
 .SH ENVIRONMENT
 .TP
 .I DH_VERBOSE
