--- a/dh_undocumented.1
+++ b/dh_undocumented.1
@@ -13,7 +13,7 @@ man page for man pages that are not present in your package.
 The program takes a list of man pages that should be symlinked to
 .BR undocumented (7)
 It determines what directory the man pages should be placed in by examining
-their extentions - pages ending in "x" go into /usr/X11R6/man/, while pages
+their extensions - pages ending in "x" go into /usr/X11R6/man/, while pages
 that end in anything else go in /usr/man/. It also examines the extention to
 see what section the man page belongs in. After figuring this out, it
 generates the necessary symlinks to
