--- a/dh_du.1
+++ b/dh_du.1
@@ -7,7 +7,7 @@ dh_du \- generate DEBIAN/du file
 .SH "DESCRIPTION"
 dh_du is a debhelper program that is responsible for generating
 a DEBIAN/du file, which lists the disk usage of directories in the package.
-This file isn't used by anthing yet, but it could be helpful for a future
+This file isn't used by anything yet, but it could be helpful for a future
 debian installer program.
 .P
 The du file is installed with proper permissions and ownerships.
