--- a/dh_installexamples.1
+++ b/dh_installexamples.1
@@ -13,7 +13,7 @@ binary package listed in debian/control, if dh_installexamples is acting on
 that package.
 .P
 A file named debian/examples (for the first binary package in debian/control),
-or debian/package.exmaples (for each additional package in debian/control) can
+or debian/package.examples (for each additional package in debian/control) can
 list other files to be installed.
 .SH OPTIONS
 .TP
@@ -44,7 +44,7 @@ and
 arguments are cumulative. If none are specified, then all packages listed in
 the control file will be effected.
 .P
-Note that dh_examples will happily copy entire directory hiearchies if
+Note that dh_examples will happily copy entire directory hierarchies if
 you ask it to (it uses cp -a internally). If it is asked to install a
 directory, it will install the complete contents of the directory.
 .SH ENVIRONMENT
