--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (0.26) unstable; urgency=low
+
+  * dh_installdirs: Do not create usr/doc/$PACKAGE directory. Bug #15498
+  * README: documented that $PACKAGE can be used in the arguments to some of
+    the dh_* programs (#15497).
+  * dh_du.1: no, this is not really the dh_md5sums man page (#15499).
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 30 Nov 1997 13:01:40 -0500
+
 debhelper (0.25) unstable; urgency=low
 
   * dh_compress: was not reading debian/compress file - fixed.
