--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.28) unstable; urgency=low
+
+  * dh_makeshlibs: fixes type that caused the program to crash (#15536).
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed,  3 Dec 1997 13:22:48 -0500
+
 debhelper (0.27) unstable; urgency=low
 
   * README: fixed typoes (one serious).
