--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.30) unstable; urgency=low
+
+  * dh_md5sumes, dh_installdirs, dh_compress: fixed assorted cd bugs.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  5 Dec 1997 15:08:36 -0500
+
 debhelper (0.29) unstable; urgency=low
 
   * dh_lib: don't expand text passed to doit() a second time. This fixes
