--- a/dh_installinit.1
+++ b/dh_installinit.1
@@ -5,7 +5,7 @@ dh_installinit \- install init scripts into package build directories
 .B dh_installinit
 .I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [-n] [-r] [-d] [-u params]"
 .SH "DESCRIPTION"
-dh_installmenu is a debhelper program that is responsible for installing
+dh_installinit is a debhelper program that is responsible for installing
 init scripts into package build directories. 
 .P
 It also automatically generates the postinst and postrm and prerm commands 
