--- a/dh_installdebfiles.1
+++ b/dh_installdebfiles.1
@@ -2,7 +2,7 @@
 .SH NAME
 dh_installdebfiles \- install files into the DEBIAN directory
 .SH SYNOPSIS
-.B dh_installdebfils
+.B dh_installdebfiles
 .I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
 dh_installdebfiles is a debhelper program that is responsible for installing
