--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.31) unstable; urgency=low
+
+  * Fixed man page typos #15685.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat,  6 Dec 1997 21:44:58 -0500
+
 debhelper (0.30) unstable; urgency=low
 
   * dh_md5sumes, dh_installdirs, dh_compress: fixed assorted cd bugs.
